Clean up test comments in pom